samples/_failures_safe/1761555916_7d2095_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1485a0a1.c: In function ‘main’:
./samples/SAFE/__tmp_1485a0a1.c:205:11: error: expected ‘;’ at end of input
  205 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_1485a0a1.c:205:5: error: expected declaration or statement at end of input
  205 |     printf
      |     ^~~~~~
